[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "balitai"
version = "0.1.0"
description = "Balitai: AI News Summarizer Tool"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
dependencies = [
    "torch",
    "pyannote.audio",
    "openai-whisper @ git+https://github.com/openai/whisper.git",
]

[project.scripts]
balitai = "balitai.cli:main"
